modified:   .vscode/launch.json 	modified:   dsa/Array/Longest Even Odd Subarray t efficient kaden's.java 	modified:   dsa/Array/Majority Element_efficient.java 	modified:   dsa/Array/Maximum Difference problem is to find the maximum of arr[j] - arr[i] where j>i.java 	modified:   dsa/Array/Maximum consecutive 1s.java     new file:   dsa/Array/Move Zeros to End efficient.java 	new file:   dsa/Array/Problem/Array insert at end.java 	new file:   dsa/Array/Problem/Array insert at index.java 	new file:   dsa/Array/Problem/Equilibrium Point,java 	new file:   dsa/Array/Problem/Equilibrium Point.java 	new file:   dsa/Array/Problem/Frequencies of Limited Range Array Elements.java 	new file:   dsa/Array/Problem/Leaders in an array,java 	new file:   dsa/Array/Problem/Max and Second Max.java 	new file:   dsa/Array/Problem/Mean And Median of Array.java 	new file:   dsa/Array/Problem/Minimum adjacent difference in a circular array.java 	new file:   dsa/Array/Problem/Pattern searching.java 	new file:   dsa/Array/Problem/Rotate Array.java 	new file:   dsa/Array/Problem/Stock buy and sell.java 	new file:   dsa/Array/Problem/Strongest Neighbour.java 	new file:   dsa/Array/Problem/Wave Array.java 	new file:   dsa/Array/Problem/Who has the majority?.java 	new file:   dsa/Array/Sliding Window Technique naive.java 	new file:   dsa/Array/Subarray with Given Sum naive.java 	modified:   dsa/Array/Subarray with Given Sum.java 	modified:   dsa/Array/left rotate an array by D places.java

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,62 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Stock_2",
+            "request": "launch",
+            "mainClass": "Stock_2",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Subarray_naive",
+            "request": "launch",
+            "mainClass": "Subarray_naive",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Stock_1",
+            "request": "launch",
+            "mainClass": "Stock_1",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Zeroend_effic",
+            "request": "launch",
+            "mainClass": "Zeroend_effic",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch RotateD",
+            "request": "launch",
+            "mainClass": "RotateD",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Rotatebyeone",
+            "request": "launch",
+            "mainClass": "Rotatebyeone",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Leader",
+            "request": "launch",
+            "mainClass": "Leader",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
+            "name": "Launch Fre_sort_arr",
+            "request": "launch",
+            "mainClass": "Fre_sort_arr",
+            "projectName": "coding_practice_35c39a6"
+        },
+        {
+            "type": "java",
             "name": "Launch check_balance",
             "request": "launch",
             "mainClass": "dsa.Tree.check_balance",
